--- a/style.css
+++ b/style.css
@@ -230,3 +230,43 @@ body{
     display:none;
    }
 }
+
+@media(max-width:400px){
+    .card{
+        width:250px;
+    }
+
+    .card .remember{
+        font-size:17px;
+    }
+
+    .card #login_link{
+        font-size:17px;
+    }
+
+    .card #login_card .input_box{
+        width:240px;
+    }
+
+    .card #login_card .input_box .icon{
+        right:30px;
+    }
+
+    .card #login_card .btn{
+        width:255px;
+    }
+
+    .card #register_link{
+        font-size:17px;
+        padding-right:20px;
+    }
+
+    .card #register_link a{
+        font-size:17px;
+    }
+
+    .card .remember_forgot{
+        font-size:16px;
+        font-weight:600;
+    }
+}
