--- a/style.css
+++ b/style.css
@@ -11,10 +11,9 @@
     left:0;
     height:30px;
     width:100%;
-    background: transparent;
     backdrop-filter:blur(20px);
     display: flex;
-    justify-content: space-between;
+    justify-content:space-between;
     padding: 10px;
     font-size: 20px;
     font-weight:600;
@@ -49,269 +48,150 @@
 }
 
 body{
+    min-height:100vh;
     display:flex;
     align-items:center;
-    justify-content:center;;
-    min-height:100vh;
-    background:url("luca-bravo-ii5JY_46xH0-unsplash.jpg") no-repeat;
+    justify-content:center;
+    background:url(luca-bravo-ii5JY_46xH0-unsplash.jpg);
     background-size:cover;
     background-position:center;
 }
 
-/* card */
+
 .card{
-    height:335px;
+    height:300px;
     display:flex;
-    border-radius:15px;
-    border:1px solid white;
-    background:transparent;
-    backdrop-filter:blur(10px);
-    position:absolute;
+    align-items:center;
+    justify-content:center;
+    text-align:center;
+    border:1px solid rgb(84, 84, 85);
+    border-radius:10px;
     overflow:hidden;
-    padding:30px 25px;
-    padding-bottom:40px
+    position:relative;
+    padding:15px;
+    backdrop-filter:blur(10px);
+}
+
+.form_box.login{
+    transform:translateX(-400px);
+}
+
+.form_box.register{
+    position:absolute;
+    transform:translateX(0px);
 }
 
 .card .close_icon{
     position:absolute;
     top:0;
     right:0;
-    font-size:30px;
+    font-size:25px;
     background:black;
-    height:35px;
-    width:35px;
-    cursor:pointer;
     color:white;
+    width:30px;
+    height:30px;
     display:flex;
     align-items:center;
     justify-content:center;
-    border-bottom-left-radius:10px;;
+    border-bottom-left-radius:10px;
 }
 
 .card .close_icon:hover{
-    color:black;
     background:white;
+    color:black;
 }
 
 .card h1{
     font-size:40px;
-    text-align:center;
+    font-weight:600;
+    color:rgb(32, 134, 207);
+    padding-bottom:15px;
 }
 
-
 .card .input_box input{
-    height:40px;
+    height:35px;
     width:100%;
-    border:2px solid black;
-    border-radius:30px;
-    background:transparent;
-    font-size:20px;
-    margin-top:15px;
-    padding-left:10px;
+    border:none;
+    border-radius:20px;
+    margin-bottom:10px;
+    font-size:18px;
+    color:black;
 }
 
 .card .input_box input::placeholder{
-    color:white;
-    font-size:17px;
-    font-weight:600;
+    font-size:18px;
+    color:black;
+    padding:0 20px 0 10px;
 }
 
 .card .input_box .icon{
     position:absolute;
-    right:5px;
-    margin-top:24px;
+    right:10px;
+    padding-top:8px;
     font-size:20px;
 }
 
-.card #register_card .input_box .icon{
-    position:absolute;
-    right:25px;
-}
-
-.card .remember_forgot{
-    display:flex;
-    justify-content:space-between;
-    font-size:18px;
+.card .remember label{
     font-weight:600;
-    margin-top:10px;
 }
 
-.card .remember_forgot label input{
+.card .remember, .remember_forgot input{
     accent-color:black;
-}
-
-.card .remember_forgot .forgot{
-    color:black;
-    padding-left:10px;
-}
-
-.card .remember_forgot .forgot:hover{
-    color:white;
-    text-decoration:underline;
 }
 
 .card .btn{
-    width:105%;
-    height:37px;
     border:none;
+    width:100%;
+    height:35px;
     border-radius:20px;
-    margin-top:20px;
-    font-size:20px;
+    margin:15px 0;
+    font-size:18px;
     font-weight:600;
-    box-shadow:0 0 5px black;
-    cursor:pointer;
 }
 
 .card .btn:hover{
-    background:black;
     color:white;
-    border:2px solid white;
-    box-shadow:0 0 10px white;
+    background:rgb(66, 146, 204);
 }
 
-.card #register_link{
-    font-size:18px;
-    font-weight:600;
-    display:flex;
-    justify-content:center;
-    color:black;
-    margin-top:10px;
-}
-
-.card .register_link{
-    font-size:18px;
-    color:black;
-    font-weight:600;
-    margin-left:5px;
-    background:none;
-    border:none;
-}
-
-.card .register_link:hover{
-    color:white;
-    text-decoration:underline;
-}
-
-.card .remember {
-    font-size:20px;
-    padding-top:10px;
-}
-
-.card .remember input{
-    accent-color:black;
-}
-
-.card #login_link{
-    font-size:18px;
-    display:flex;
-    justify-content:center;
-    color:black;
-    font-weight:600;
-    margin-top:10px;
+.card #login_link p{
+   font-weight:600;
 }
 
 .card .login_link{
     color:black;
-    margin-left:5px;
 }
 
 .card .login_link:hover{
     color:white;
-    text-decoration:underline;
 }
 
-.card .form_box.login{
-    position:absolute;
-    transform:translateX(-400px);
+.card .remember_forgot{
+    font-weight:600;
 }
 
-@media(max-width:640px) {
-   .header a{
-    display:none;
-   }
+.card .remember_forgot a{
+    padding-left:10px;
 }
 
-@media(max-width:400px){
-    .card{
-        width:250px;
-    }
-
-    .card .remember{
-        font-size:17px;
-        padding-left:8px;
-    }
-
-    .card #login_link{
-        font-size:17px; 
-    }
-
-    .card #login_card .input_box{
-        width:240px;
-    }
-
-    .card #login_card .input_box .icon{
-        right:20px;
-    }
-
-    .card #login_card .btn{
-        width:255px;
-    }
-
-    .card #register_link{
-        font-size:17px;
-        padding-left:3px;
-    }
-
-    .card #register_link a{
-        font-size:17px;
-    }
-
-    .card .remember_forgot{
-        font-size:16px;
-        font-weight:600;
-    }
+.card .remember_forgot a:hover{
+    color:white;
 }
 
-@media(max-width:350px) {
-    .card{
-        width:200px;
-    }
+.card #register_link{
+    font-weight:600;
+}
 
-    .card .remember{
-        font-size:12px;
-    }
+.card #register_link a{
+    color:black;
+}
 
-    .card #login_link{
-        font-size:12px; 
-    }
+.card #register_link a:hover{
+    color:white;
+}
 
-    .card #login_card .input_box{
-        width:190px;
-    }
-
-    .card #login_card .input_box .icon{
-        right:30px;
-    }
-
-    .card #login_card .btn{
-        width:200px;
-    }
-
-    .card #register_link{
-        font-size:13px;
-        padding-right:30px;
-    }
-
-    .card #register_link a{
-        font-size:13px;
-    }
-
-    .card .remember_forgot{
-        font-size:13px;
-    }
-
-    .card .remember_forgot .forgot{
-        padding-right:13px;
-        padding-top:1px;
+@media(max-width:600px) {
+    .header a{
+        display:none;
     }
 }
