--- a/style.css
+++ b/style.css
@@ -47,6 +47,31 @@
     color:black;
 }
 
+/* footer */
+.footer{
+    display:flex;
+    justify-content:space-between;
+    position:absolute;
+    bottom:0;
+    left:0;
+    right:0;
+    backdrop-filter:20px;
+    background:black;
+    padding:10px;
+    color:white;
+    font-weight:600;
+}
+
+.footer .social-links a{
+    font-size:12px;
+    color:white;
+    padding-left:5px;
+}
+
+.footer .social-links a:hover{
+    text-decoration:underline;
+}
+
 body{
     height:100vh;
     display:flex;
@@ -54,18 +79,17 @@ body{
     align-items:center;
     justify-content:center;
     background:url(luca-bravo-ii5JY_46xH0-unsplash.jpg);
-
     background-size:cover;
     background-position:center;
 }
 
 .main{
-    min-height:100vh;
     display:flex;
     flex-direction:column;
     justify-content:center;
 }
 
+/* home */
 .home{
     height:100vh;
     display:flex;
@@ -73,7 +97,7 @@ body{
 }
 
 .card{
-    height:340px;
+    min-height:340px;
     display:flex;
     align-items:center;
     justify-content:center;
