--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@
 
 .footer .social-links a{
     font-size:12px;
+    font-weight:600;
     color:white;
     padding-left:5px;
 }
@@ -84,6 +85,7 @@ body{
 }
 
 .main{
+    min-height:100vh;
     display:flex;
     flex-direction:column;
     justify-content:center;
@@ -108,6 +110,7 @@ body{
     position:relative;
     padding:15px;
     backdrop-filter:blur(10px);
+    
 }
 
 .form_box.login{
