--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@
 .footer{
     display:flex;
     justify-content:space-between;
-    position:absolute;
+    position:fixed;
     bottom:0;
     left:0;
     right:0;
@@ -85,7 +85,6 @@ body{
 }
 
 .main{
-    min-height:100vh;
     display:flex;
     flex-direction:column;
     justify-content:center;
