--- a/style.css
+++ b/style.css
@@ -51,10 +51,7 @@
 .footer{
     display:flex;
     justify-content:space-between;
-    position:fixed;
-    bottom:0;
-    left:0;
-    right:0;
+    width:100%;
     backdrop-filter:20px;
     background:black;
     padding:10px;
@@ -92,6 +89,7 @@ body{
 /* home */
 .home{
     height:100vh;
+    width:100%;
     display:flex;
     align-items:center;
 }
