--- a/style.css
+++ b/style.css
@@ -51,7 +51,10 @@
 .footer{
     display:flex;
     justify-content:space-between;
-    width:100%;
+    position:fixed;
+    bottom:0;
+    left:0;
+    right:0;
     backdrop-filter:20px;
     background:black;
     padding:10px;
@@ -89,9 +92,12 @@ body{
 /* home */
 .home{
     height:100vh;
-    width:100%;
     display:flex;
     align-items:center;
+}
+
+.about{
+    height:100vh;
 }
 
 .card{
