--- a/style.css
+++ b/style.css
@@ -9,8 +9,7 @@
     position:fixed;
     top:0;
     left:0;
-    height:30px;
-    width:100%;
+    right:0;
     backdrop-filter:blur(20px);
     display: flex;
     justify-content:space-between;
@@ -38,7 +37,6 @@
     font-size:20px;
     font-weight:600;
     padding:0 15px;
-    margin-right:20px;
     cursor:pointer;
 }
 
