--- a/style.css
+++ b/style.css
@@ -242,7 +242,7 @@ body{
 
 .about-details{
     backdrop-filter:blur(10px);
-    border:1px solid black;
+    border:1px solid rgb(34, 33, 33);
     border-radius:10px;
     padding:10px;
     margin-top:10px;
@@ -258,10 +258,7 @@ body{
 
 .about-details p, li{
     font-size:17px;
-}
-
-.about-details li{
-    padding-bottom:5px;
+    padding-bottom:10px;
 }
 
 @media(min-width:360px) {
