--- a/style.css
+++ b/style.css
@@ -234,10 +234,11 @@ body{
 .about{
     height:100vh;
     width:250px;
-    display:none;
+    display:flex;
     flex-direction:column;
     align-items:center;
     justify-content:center;
+  
 }
 
 .about-details{
@@ -264,7 +265,7 @@ body{
 /* contact */
 .contact{
     height:100vh;
-    display:none;
+    display:flex;
     flex-direction:column;
     justify-content:center;
     text-align:center;
@@ -316,6 +317,11 @@ form{
 .contact .contact-btn:hover{
     background:white;
     color:black;
+}
+
+
+.about, .contact{
+    display:none;
 }
 
 @media(min-width:360px) {
