--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ body{
 
 
 .card{
-    min-height:340px;
+    height:340px;
     display:flex;
     align-items:center;
     justify-content:center;
