--- a/style.css
+++ b/style.css
@@ -57,9 +57,10 @@
     display:flex;
     flex-direction:column;
     text-align:center;
-    position:fixed;
+    position:absolute;
     top:0px;
     left:0px;
+    z-index:1;
     background:green;
     width:150px;
     height:100vh;
@@ -146,6 +147,7 @@ body{
 }
 
 .main{
+    height:100vh;
     display:flex;
     flex-direction:column;
     align-items:center;
@@ -154,9 +156,10 @@ body{
 
 /* home */
 .home{
-    height:100vh;
+    width:100%;
     display:flex;
     align-items:center;
+    justify-content:center;
 }
 
 
@@ -169,18 +172,17 @@ body{
     border:1px solid rgb(84, 84, 85);
     border-radius:10px;
     overflow:hidden;
-    position:relative;
     padding:15px;
     backdrop-filter:blur(10px);
 }
 
 .form_box.login{
-    transform:translateX(-400px);
+    transform:translateX(0px);
 }
 
 .form_box.register{
     position:absolute;
-    transform:translateX(0px);
+    transform:translateX(400px);
 }
 
 .card .close_icon{
@@ -294,8 +296,7 @@ body{
 
 /* about */
 .about{
-    height:100vh;
-    width:250px;
+    width:100%;
     display:flex;
     flex-direction:column;
     align-items:center;
@@ -303,11 +304,12 @@ body{
 }
 
 .about-details{
-    backdrop-filter:blur(10px);
+    width:250px;
+    background:rgb(173, 163, 163);
     border:1px solid rgb(34, 33, 33);
     border-radius:10px;
     padding:10px;
-    margin-top:10px;
+    margin:10px 0;
 }
 
 .about h1{
@@ -325,7 +327,7 @@ body{
 
 /* contact */
 .contact{
-    height:100vh;
+   
     display:flex;
     flex-direction:column;
     justify-content:center;
@@ -335,7 +337,6 @@ body{
 form{
     display:flex;
     flex-direction:column;
-   
 }
 
 .contact h1{
