--- a/style.css
+++ b/style.css
@@ -142,7 +142,8 @@ body{
     height:100vh;
     width:100%;
     background:url(luca-bravo-ii5JY_46xH0-unsplash.jpg);
-   
+    background-size:cover;
+    background-position:center;
 }
 
 .main{
