--- a/style.css
+++ b/style.css
@@ -141,25 +141,28 @@
 body{
     height:100vh;
     width:100%;
-    background:url(luca-bravo-ii5JY_46xH0-unsplash.jpg);
+    /* background:url(luca-bravo-ii5JY_46xH0-unsplash.jpg);
     background-size:cover;
-    background-position:center;
+    background-position:center; */
 }
 
-.main{
-    height:100vh;
+/* .main{
     display:flex;
     flex-direction:column;
     align-items:center;
     justify-content:center;
-}
+} */
 
 /* home */
 .home{
+    min-height:100vh;
     width:100%;
     display:flex;
     align-items:center;
     justify-content:center;
+    background:url(luca-bravo-ii5JY_46xH0-unsplash.jpg);
+    background-size:cover;
+    background-position:center;
 }
 
 
@@ -296,11 +299,13 @@ body{
 
 /* about */
 .about{
+    min-height:100vh;
     width:100%;
     display:flex;
     flex-direction:column;
     align-items:center;
     justify-content:center;
+    background:yellow;
 }
 
 .about-details{
@@ -327,13 +332,17 @@ body{
 
 /* contact */
 .contact{
+    min-height:100vh;
+    width:100%;
     /* padding:15px;
     backdrop-filter:blur(10px);
     border:2px solid black; */
     display:flex;
     flex-direction:column;
     justify-content:center;
+    align-items:center;
     text-align:center;
+    background:blue;
 }
 
 form{
@@ -383,9 +392,9 @@ form{
     color:black;
 }
 
-.about, .contact{
+/* .about, .contact{
     display:none;
-}
+} */
 
 @media(min-width:360px) {
     .footer .social-links a{
