--- a/style.css
+++ b/style.css
@@ -138,13 +138,10 @@
     color:rgb(32, 134, 207);
 }
 
-body{
+/* body{
     height:100vh;
     width:100%;
-    /* background:url(luca-bravo-ii5JY_46xH0-unsplash.jpg);
-    background-size:cover;
-    background-position:center; */
-}
+} */
 
 /* .main{
     display:flex;
@@ -160,9 +157,9 @@ body{
     display:flex;
     align-items:center;
     justify-content:center;
-    background:url(luca-bravo-ii5JY_46xH0-unsplash.jpg);
+    /* background:url(luca-bravo-ii5JY_46xH0-unsplash.jpg);
     background-size:cover;
-    background-position:center;
+    background-position:center; */
 }
 
 
@@ -305,7 +302,6 @@ body{
     flex-direction:column;
     align-items:center;
     justify-content:center;
-    background:yellow;
 }
 
 .about-details{
@@ -342,7 +338,6 @@ body{
     justify-content:center;
     align-items:center;
     text-align:center;
-    background:blue;
 }
 
 form{
@@ -392,9 +387,15 @@ form{
     color:black;
 }
 
-/* .about, .contact{
+.about, .contact{
     display:none;
-} */
+}
+
+.home, .about, .contact{
+    background:url(luca-bravo-ii5JY_46xH0-unsplash.jpg);
+    background-size:cover;
+    background-position:center;
+}
 
 @media(min-width:360px) {
     .footer .social-links a{
