--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
     top:0;
     left:0;
     right:0;
+    z-index:1;
     backdrop-filter:blur(20px);
     display: flex;
     justify-content:space-between;
@@ -60,7 +61,7 @@
     position:absolute;
     top:0px;
     left:0px;
-    background:green;
+    background:rgb(92, 93, 94);
     width:150px;
     height:100vh;
     gap:30px;
@@ -302,7 +303,7 @@
 
 .about-details{
     width:250px;
-    background:rgb(173, 163, 163);
+    backdrop-filter:blur(10px);
     border:1px solid rgb(34, 33, 33);
     border-radius:10px;
     padding:10px;
