--- a/style.css
+++ b/style.css
@@ -298,6 +298,7 @@ footer p{
     flex-direction:column;
     align-items:center;
     justify-content:center;
+    padding:30px 0;
 }
 
 .about-details{
@@ -418,7 +419,7 @@ form{
     }
 
     .about-details{
-        width:400px;
+        width:320px;
     }
 
     .about h1{
